app/_components/course/CourseCard/CourseCard.module.css
.courseCard {
  display: flex;
  flex-direction: column;
  border: 1px solid var(--border-color-150);
  border-radius: 8px;
  overflow: hidden;
  cursor: pointer;
  color: var(--primary-text-dark);
  transition: all 0.2s ease;
}
.courseCard:hover {
  box-shadow: var(--shadow-card);
  transform: translateY(-2px);
}
.courseCard a {
  color: inherit;
}
.preview {
  width: 100%;
  height: 157px;
}
.thumbnail {
  width: 100%;
  height: inherit;
}
.courseInfo {
  padding: 14px;
}
.courseTitle {
  font-size: 18px;
  line-height: 28px;
  font-weight: bold;
  margin-bottom: 6px;
  height: 57px;
  width: 100%;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: normal;
}
.line {
  width: 100%;
  display: flex;
  margin-bottom: 8px;
  justify-content: space-between;
}
.courseType {
  width: 69px;
  height: 28px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #ebfff3;
  color: #00903b;
  border-radius: 4px;
}
.courseType p {
  font-size: 14px;
  line-height: 20px;
  font-weight: bold;
}
.coursePrice {
  padding: 3px 6px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--primary-peach);
  border-radius: 4px;
}
.coursePrice p {
  /* font-size: 14px;
  line-height: 20px; */
  color: var(--primary-orange);
}
.rating {
  display: flex;
  align-items: center;
  margin-bottom: 16px;
}
.blackstar {
  width: 13.28px;
  height: 12.54px;
  margin-right: 3px;
}
.courseDesc {
  color: var(--primary-grey-200);
  font-size: 14px;
  line-height: 20px;
  display: -webkit-box;
  width: 100%;
  height: 40px;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: normal;
}
.tags {
  display: flex;
  margin: 14px 0 16px;
}
.tag {
  margin-right: 4px;
  border-radius: 2px;
  padding: 4px 8px;
}
.tag p {
  font-size: 12px;
  line-height: 18px;
  font-weight: bold;
  color: var(--primary-text-dark);
}
.cart {
  height: 20px;
  width: 19.89px;
  margin-left: 10px;
}

.btn {
  width: 100%;
  height: 40px;
}


/* .truncate {
  display: -webkit-box;
  width: 250px;
  line-clamp: 2;
  -webkit-line-clamp: 2; 
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: normal; 
} */

